--- a/extension/public/manifest.json
+++ b/extension/public/manifest.json
@@ -47,6 +47,6 @@
     }
   ],
   "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'"
+    "extension_pages": "script-src 'self'; object-src 'self'; img-src 'self' https:"
   }
 }
