--- a/extension/package.json
+++ b/extension/package.json
@@ -8,9 +8,7 @@
     "watch": "webpack --mode development --watch",
     "dev": "webpack --mode development"
   },
-  "dependencies": {
-    "firebase": "^11.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "copy-webpack-plugin": "^12.0.0",
     "css-loader": "^7.0.0",
